Revise index.html for ELITE RUST SERVERS™
Updated the HTML structure and content for the ELITE RUST SERVERS™ website, including navbar, hero section, footer, and links.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark nav-blur fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-        <img src="EliteLogo.png" alt="ELITE RUST SERVERS™" height="32">
+        <img src="EliteLogo.png" alt="ELITE Logo" height="36" class="navbar-icon">
         <span class="fw-bold brand-gold">ELITE RUST SERVERS™</span>
       </a>
 
@@ -109,7 +109,7 @@
     <div class="container py-5">
       <div class="row g-4">
         <div class="col-12 col-lg-4">
-          <img src="EliteLogo.png" height="36" class="mb-2" alt="ELITE">
+          <img src="EliteLogo.png" height="40" class="mb-2" alt="ELITE">
           <h5 class="brand-gold mb-2">ELITE RUST SERVERS™</h5>
           <p class="text-secondary small">
             Experience Elite Rust Servers gaming with active community, fair play, and protected servers.
@@ -117,6 +117,7 @@
           <div class="d-flex gap-3">
             <a href="https://discord.gg/c9aeRr88Zf" class="link-gold">Discord</a>
             <a href="https://eliterust.tebex.io/" class="link-gold">Store</a>
+            <a href="https://www.tiktok.com/@eliterustservers" class="link-gold">TikTok</a>
           </div>
         </div>
 
@@ -131,7 +132,7 @@
           <h6 class="brand-gold">Community</h6>
           <a href="https://discord.gg/c9aeRr88Zf" class="footer-link">Discord</a>
           <a href="#" class="footer-link">YouTube</a>
-          <a href="#" class="footer-link">TikTok</a>
+          <a href="https://www.tiktok.com/@eliterustservers" class="footer-link">TikTok</a>
         </div>
 
         <div class="col-12 col-lg-4">
