--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark nav-blur fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="#">
-        <img src="EliteLogo.png" alt="ELITE Logo" height="36" class="navbar-icon">
+        <img src="EliteLogo.png" alt="ELITE Logo" class="navbar-icon">
         <span class="fw-bold brand-gold">ELITE RUST SERVERS™</span>
       </a>
 
@@ -33,8 +33,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div id="nav" class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto gap-lg-4">
+      <div id="nav" class="collapse navbar-collapse justify-content-end">
+        <ul class="navbar-nav gap-lg-4 text-center">
           <li class="nav-item"><a class="nav-link active underline" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link underline" href="https://eliterust.tebex.io/">Store</a></li>
           <li class="nav-item"><a class="nav-link underline" href="https://discord.gg/c9aeRr88Zf">Report</a></li>
@@ -48,7 +48,7 @@
     <div class="container position-relative">
       <div class="row align-items-center gy-5">
         <!-- Left: Text -->
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 text-lg-start text-center">
           <h1 class="display-5 fw-bold lh-1 mb-3">
             ELITE RUST SERVERS™ WHERE THE <span class="brand-gold">BEST</span> COMPETE
           </h1>
@@ -56,12 +56,12 @@
             The leading network in competitive Rust since 2025. Join thousands of players in the ultimate survival experience.
           </p>
 
-          <div class="d-flex flex-wrap gap-3 mb-4">
+          <div class="d-flex flex-wrap justify-content-center justify-content-lg-start gap-3 mb-4">
             <a href="https://discord.gg/c9aeRr88Zf" class="btn btn-warning fw-semibold px-4">🔗 Link Accounts</a>
             <a href="https://discord.gg/c9aeRr88Zf" class="btn btn-danger fw-semibold px-4">🚫 Cheater Report</a>
           </div>
 
-          <div class="d-flex gap-5 stats">
+          <div class="d-flex flex-wrap justify-content-center justify-content-lg-start gap-5 stats">
             <div><span class="h4 brand-gold fw-bold">1000+</span><br><small class="text-secondary">Players</small></div>
             <div>
               <a href="https://discord.gg/c9aeRr88Zf" class="text-decoration-none">
@@ -73,17 +73,15 @@
           </div>
         </div>
 
-        <!-- Right: Ring + badges -->
+        <!-- Right: Rings + badges -->
         <div class="col-12 col-lg-6">
-          <div class="logo-stage mx-lg-auto">
-            <!-- animated rings -->
+          <div class="logo-stage mx-auto">
             <div class="ring r1"></div>
             <div class="ring r2"></div>
             <div class="ring r3"></div>
-            <!-- logo -->
             <img src="EliteLogo.png" class="main-logo" alt="Elite Logo">
 
-            <!-- badges positioned around circle -->
+            <!-- Badges -->
             <div class="badge-card b-top-left shadow-soft">
               <div>⚡ <strong>High Capacity</strong></div>
               <small class="text-secondary">Supports 800+ Players</small>
@@ -144,13 +142,12 @@
       </div>
 
       <p class="text-center text-secondary small mt-4">
-        © 2025 ELITE RUST SERVERS™. All rights reserved. <br>Made with ❤️ by ELITE RUST SERVERS™!
+        © 2025 ELITE RUST SERVERS™. All rights reserved. <br>Made with ❤️ by Elite Rust Servers™!
       </p>
     </div>
   </footer>
 
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
